# src/routes/index.ts
@@ -8,6 +8,7 @@ import AddressRouter from "../modules/address/routes/AddressRouter";
 import HospitalRouter from "../modules/hospital/routes/HospitalRouter";
 import DepartmentRouter from "../modules/department/routes/DepartmentRouter";
 import StaffRouter from "../modules/staff/routes/StaffRouter";
+import AttendanceRouter from "../modules/attendance/Routers/AttendanceRouter";
 
 const router = express.Router();
 
@@ -20,6 +21,6 @@ router.use("/v1/address/", AddressRouter);
 router.use("/v1/hospital/", HospitalRouter);
 router.use("/v1/department/", DepartmentRouter);
 router.use("/v1/staff/", StaffRouter);
-
+router.use("/v1/attendance/", AttendanceRouter);
 
 export default router;
